--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <!--using head/meta from React Helmet-->
+  <meta charSet="UTF-8"/>
+  <link rel="icon" href="/iconLight.ico"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>André João | PT</title>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
