--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="/iconLight.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>André João | PT</title>
+  <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+<!--  <link rel="stylesheet" type='text/css' href="./src/static/css/devicon.min.css" />-->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
