--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>André João | Portfolio</title>
 
   <meta property="og:title" content="André João | Portfolio" />
+  <meta property="og:description" content="Web Developer" />
   <meta property="og:image" content="/me.png" />
   <meta property="og:image_alt" content="photo of me" />
   <meta property="og:url" content="https://andrejoao.on.fleek.co/" />
